# gnome-todo

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-todo.doap
data/: Makefile.am  org.gnome.Todo.desktop.in.in  org.gnome.todo.gschema.xml.in  todo.gresource.xml
data/appdata/: org.gnome.Todo.appdata.xml.in
data/gtk/: menus.ui
data/theme/: Adwaita.css
data/ui/: edit-pane.ui  goa-row.ui  initial-setup.ui  list-view.ui  menus.ui  source-dialog.ui  source-selector.ui  storage-popover.ui  storage-row.ui  storage-selector.ui  task-list-item.ui  task-row.ui  window.ui
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  gtd-application.c  gtd-application.h  gtd-arrow-frame.c  gtd-arrow-frame.h  gtd-edit-pane.c  gtd-edit-pane.h  gtd-enums.h  gtd-goa-row.c  gtd-goa-row.h  gtd-initial-setup-window.c  gtd-initial-setup-window.h  gtd-list-view.c  gtd-list-view.h  gtd-manager.c  gtd-manager.h  gtd-object.c  gtd-object.h  gtd-source-selector.c  gtd-source-selector.h  gtd-storage-popover.c  gtd-storage-popover.h  gtd-storage-row.c  gtd-storage-row.h  gtd-storage-selector.c  gtd-storage-selector.h  gtd-storage.c  gtd-storage.h  gtd-task-list-item.c  gtd-task-list-item.h  gtd-task-list.c  gtd-task-list.h  gtd-task-row.c  gtd-task-row.h  gtd-task.c  gtd-task.h  gtd-types.h  gtd-window.c  gtd-window.h  main.c
